# tic-tac-toe-optimal-strategy

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.md  input.txt  main.cpp  output.dot  tic_tac_toe  tic_tac_toe.cpp  tic_tac_toe.hpp
tests/: BuildOptimalTree.cpp  EvaluateMoveTests.cpp  EvaluatePositionTests.cpp  ParseStrategyTaskTests.cpp  SolveTests.cpp
tictactoe_batniki/: README.txt  TESTS_LIST.txt  run_tests.bat  run_tests.sh  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test07.txt  test08.txt  test09.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test16.txt  test17.txt  test18.txt  test19.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test30.txt
